--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,7 +1,7 @@
 spring.profiles.active=dev
 
 # Database Configuration
-spring.datasource.url=jdbc:postgresql://localhost:5432/question_pro_db
+spring.datasource.url=jdbc:postgresql://172.17.0.2:5432/question_pro_db
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
