--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,16 @@
+# application.properties
 
+# Database Configuration
+spring.datasource.url=jdbc:postgresql://172.17.0.2:5432/question_pro_db
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# Hibernate Configuration
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+logging.level.org.springframework.web=DEBUG
+
+# Server Configuration
+server.port=8280
